--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">My own App</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="main_form">Основной экран</string>
+    <string name="second_form">Второй уровень</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
