--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">My own App</string>
-    <string name="main_form">Основной экран</string>
-    <string name="second_form">Второй уровень</string>
+    <string name="app_name">Тренируем счёт</string>
+    <string name="title_activity_main2">1 уровень</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -10,4 +9,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_main3">2 уровень</string>
+    <string name="title_activity_main4">3 уровень</string>
+    <string name="title_activity_main5">4 уровень</string>
 </resources>
